# FINTECH_RL_AGENT

./: .env.example  .gitignore  README.md  app.py  conftest.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh
creditlens/: __init__.py  models.py
creditlens/data/: dataset.py  generate.py
creditlens/env/: engine.py  reward.py
creditlens/inference/: agent.py  service.py
creditlens/rl/: train_ppo.py
creditlens/tasks/: graders.py
docker/: Dockerfile  compose.yml
server/: app.py
tests/: graders.py  test_env.py
